Fix drag and drop remove icon overflowing

--- a/src/app/pages/player/assessment/components/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/pages/player/assessment/components/drag-and-drop/drag-and-drop.component.scss
@@ -44,8 +44,9 @@
 }
 
 .response-item{
+  position: relative;
   margin-bottom: 5px;
-  padding: .5em;
+  padding: .5em 1.5em .5em .5em;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background: white;
 
@@ -54,7 +55,9 @@
   }
 
   ion-icon{
-    float: right;
-    font-size: 1.5em;
+    position: absolute;
+    top: calc(50% - .6em);
+    right:.2em;
+    font-size: 1.2em;
   }
 }
